# Roastproof

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  NOTES.md  README.md  TESTING.md  pyproject.toml
.cursor/rules/: roastproof-conventions.mdc
data/knowledge/: rewrite_examples.json  rulebook.json  style_lexicon.json
data/norms/: norms.db  norms.json
data/structured/: assembled.jsonl  extraction_triage.json  pilot.jsonl  threads.jsonl
docs/: COMMANDS.md  chat.md
docs/phases/: phase0-setup.md  phase1-ingestion.md  phase2-exploration-norms.md  phase3-knowledge-base.md  phase4-generation.md  phase4.5-writer-quality.md  phase4.6-corpus-writer.md  phase5-critic-loop.md  phase6-evaluation.md  phase7-interface-ship.md
examples/: arya_resume.qa.yaml  arya_resume.yaml  intake_example.yaml  intake_overstuffed.yaml  my_intake.qa.yaml  my_intake.yaml  seeded_weak_intake.qa.yaml  seeded_weak_intake.yaml  space.tex
notebooks/: 01_exploration.ipynb  FINDINGS.md  critique_labels.jsonl  exploration_summary.json
scripts/: audit_raw.py  generate_sample_list.py  make_holdout.py  sync_scraper_data.py  test_retrieval.py
src/: llm.py  schemas.py
src/generation/: __init__.py  critic.py  elicit.py  fluff.py  generator.py  intake.py  intake_coverage.py  pagefit.py  pipeline.py  project_eval.py  prompts.py  qa_store.py  renderer.py  report.py
templates/: jakes_resume.tex.j2
tests/: test_elicit_memory.py  test_exploration.py  test_generation.py  test_ingestion.py  test_norms.py  test_page_fill.py  test_phase3_knowledge.py  test_phase46.py  test_phase5_critic.py
(+57 files in other folders)
