[project]
name = "roastproof"
version = "0.1.0"
description = "A community-grounded resume generator."
authors = [{ name = "Erfan", email = "erfan@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF",
    "pdfplumber",
    "pandas",
    "chromadb",
    "sentence-transformers",
    "openai",
    "python-dotenv",
    "Jinja2",
    "streamlit",
    "pytest",
    "pydantic",
    "tqdm",
    "matplotlib",
    "PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
